--- a/.gitmodules
+++ b/.gitmodules
@@ -1,19 +1,19 @@
 [submodule "funky-monitor"]
 	path = funky-monitor
-	url = git@github.com:TUM-DSE/funky-monitor.git
+	url = https://github.com/TUM-DSE/proteus-monitor.git
 	branch = proteus
 [submodule "funky-unikernel"]
 	path = funky-unikernel
-	url = git@github.com:TUM-DSE/funky-unikernel.git
+	url = https://github.com/TUM-DSE/proteus-unikernel.git
 	branch = proteus
 [submodule "proteus-eval"]
 	path = proteus-eval
-	url = git@github.com:TUM-DSE/proteus-eval.git
-[submodule "Vitis_Accel_Examples"]
+	url = https://github.com/TUM-DSE/proteus-eval.git
+[submodule "vitis-accel-examples"]
 	path = vitis-accel-examples
-	url = git@github.com:TUM-DSE/Vitis_Accel_Examples.git
+	url = https://github.com/TUM-DSE/proteus-vitis-accel-examples.git
 	branch = proteus-evaluation
 [submodule "funky-rosetta"]
 	path = funky-rosetta
-	url = git@github.com:TUM-DSE/funky-rosetta.git
+	url = https://github.com/TUM-DSE/proteus-rosetta.git
 	branch = proteus
